--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	<link rel="stylesheet" href="blkBkStyles.css">
   </head>
   <body>
-<h1>test</h1>
+<h1><a href="test1/blkTest1.html" target="_blank">First</a> Thought</h1>
   </body>
 </html>
