--- a/test1/bodies/georgeWarnold.html
+++ b/test1/bodies/georgeWarnold.html
@@ -3,12 +3,18 @@
 <head>	<title>George Arnold</title>
 	<link rel="stylesheet" href="george.w.aStyles.css"></head>
 
+<!-- https://www.loc.gov/resource/mesn.050/?sp=5 -->
+
 <body>	<h1>George W. Arnold</h1>
 
 	<h3>Story</h3>
-	<p>I grew up on a plantation, wasn't too bad. When freedom came It broke up a lot of real friendships and scattered many families. When we were set free my mom had many pretty quilts and lots of bedding and we walked very far to try and find a new home. Eventually I got a job on a railroad... its the worst thing that has ever happen to me</p>
+	<p>I grew up on a plantation, wasn't too bad. When freedom came It broke up a lot of real friendships and scattered many families.
+<!--
+When we were set free my mom had many pretty quilts and lots of bedding and we walked very far to try and find a new home.
+-->
+Eventually I got a job on a railroad... its the worst thing that has ever happen to me</p>
 	<p>My good friend, better than a brother got way too drunk. We fought. He stabbed me in the neck, I hacked him one time with an ax. He said "Oh, George what an awful thing we have done? we have never said a cross word to each other, and now look at us both." With that he walked out into the darkness. We followed the blood trail he left but we never found his body. His blood was on my hands and I feel his ghost haunted me everyday after that.</p>
-	<p>I got a job on a ferryboat after that. I heard that ghost cant follow you over water. Thats up until <span style="font-size:30px;">one day we got a bad omen on the boat. Rats jumping off before we took off one day. Most of the crew refused to sail that day but I stayed on. We almost made it the whole trip with nothing going wrong but then a fire broke out and burned the boat down to nothing</span></p>
+	<p>I got a job on a ferryboat after that. I heard that ghost cant follow you over water. Thats up until <span style="font-size:30px; color:white;">one day we got a bad omen on the boat. Rats jumping off before we took off one day. Most of the crew refused to sail that day but I stayed on. We almost made it the whole trip with nothing going wrong but then a fire broke out and burned the boat down to nothing</span></p>
 	<h3><a href="../blkTest1.html">Next</a></h3>
 	</body>
 </html>
