--- a/test1/blkTest1.html
+++ b/test1/blkTest1.html
@@ -22,23 +22,23 @@
 <!-- .............................. -->
 
 <tr>
-<td><a href="bodies/rosaBarber.html"><img src="dntilt.png" alt="body"></a></td>
+<td><a href="bodies/rosaBarber.html"><img src="bodies/eyes/1.jpg" alt="body"></a></td>
 </tr>
 
 <tr>
-<td><a href="bodies/georgeWarnold.html"><img src="straightdn.png" alt="body"></a></td>
+<td><a href="bodies/georgeWarnold.html"><img src="bodies/eyes/2.jpg" alt="body"></a></td>
 </tr>
 
 <tr>
-<td><img src="left.png" alt="body"></td>
+<td><a href="bodies/mittieBlakeley.html"><img src="bodies/eyes/3.jpg" alt="body"></a></td>
 </tr>
 
 <tr>
-<td><img src="straightup.png" alt="body"></td>
+<td><a href="bodies/thomasAsh.html"><img src="bodies/eyes/4.jpg" alt="body"></a></td>
 </tr>
 
 <tr>
-<td><img src="uptilt.png" alt="body"></td>
+<td><a href="bodies/maryCrane.html"><img src="bodies/eyes/5.jpg" alt="body"></a></td>
 </tr>
 
 </table>
