--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<link rel="stylesheet" href="blkBkStyles.css">
   </head>
   <body>
-<h1><a href="test1/blkTest1.html" target="_blank">First</a> Thought</h1>
+<h1><a href="test1/blkTest1.html" target="_blank">Whites Only</a> &nbsp&nbsp&nbsp&nbsp  <a href="test1/blkTest2.html" target="_blank">Colors Only</a></h1>
+
+
   </body>
 </html>
